--- a/7.Appendix.tex
+++ b/7.Appendix.tex
@@ -30,6 +30,7 @@ morekeywords={*,...}            % if you want to add more keywords to the set
 
 
 \chapter{Scenario 1}
+\label{app:sc1}
 
 \lstinputlisting[caption=Cloud.sj]{tests/src/thesis/Cloud.sj}
 
@@ -38,6 +39,7 @@ morekeywords={*,...}            % if you want to add more keywords to the set
 \lstinputlisting[caption=User.sj]{tests/src/thesis/User.sj}
 
 \chapter{Scenario 2}
+\label{app:sc2}
 
 \lstinputlisting[caption=Cloud.sj]{tests/src/thesis/scenario2/Cloud.sj}
 
