--- a/Config.tex
+++ b/Config.tex
@@ -6,7 +6,9 @@
 \usepackage[T2A]{fontenc}
 \usepackage[russian,english]{babel}
 \usepackage{amsmath}
-\usepackage{algorithmic}
+\usepackage{amssymb}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 \usepackage{fancyvrb}
 \usepackage{color}
 \usepackage{listings}
@@ -33,10 +35,14 @@
     urlcolor=blue
 }
 
+% set description list indentation
+\usepackage{enumitem}
+\setdescription{leftmargin=1cm,labelindent=0cm}
+
 % Set-up code visualisation
 \lstset{fancyvrb=true}
 \lstset{
-language=c++,                % the language of the code
+language=java,                % the language of the code
 basicstyle=\footnotesize,       % the size of the fonts that are used for the code
 numbers=left,                   % where to put the line-numbers
 numberstyle=\footnotesize,      % the size of the fonts that are used for the line-numbers
@@ -59,6 +65,12 @@ title=\lstname,                 % show the filename of files included with \lsti
                                 % also try caption instead of title
 escapeinside={\%*}{*)},         % if you want to add a comment within your code
 morekeywords={*,...}            % if you want to add more keywords to the set
+}
+\lstset {
+    keywordstyle=\color[rgb]{0,0,1},          % keywords in blue
+    commentstyle=\mcommentfont,               % comments
+    stringstyle=\color[rgb]{.627,.126,.941},  % strings in purple
+    commentstyle=\color[rgb]{.133,.545,.133}
 }
 
 \parindent=1cm
@@ -93,6 +105,8 @@ morekeywords={*,...}            % if you want to add more keywords to the set
 \bfseries\Large
 #1\par\nobreak\vspace{24 pt}}}
 \makeatother
+
+\newcommand{\Indstate}[1][1]{\State\hspace{#1\parindent}}
 
 % \setlength{\parindent}{4cm}
 % \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
